# Matchability

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
docs/: metric.md
experiments/lib/: io_video.py  plots.py  report.py
experiments/results/: sensitivity.csv  summary.md
experiments/results_vae/: vae_sensitivity.csv  vae_summary.md
experiments/scripts/: extract_frames.py  generate_overlays.py  plot_results.py  run_sensitivity.py  run_vae_experiment.py
experiments/tests/: test_io_video.py  test_plots.py  test_quality.py  test_report.py
scripts/: generate_overlays.py  plot_results.py  run_sensitivity.py  run_vae_experiment.py
src/matchability/: __init__.py  api.py  cli.py  distortions.py  epipolar.py  imageio_util.py  metric.py  quality.py  report.py  types.py  viz.py
src/matchability/matchers/: __init__.py  base.py  classical.py  dedode.py  mock.py
tests/: conftest.py  test_api.py  test_cli.py  test_dedode.py  test_distortions.py  test_epipolar.py  test_imageio.py  test_io_video.py  test_matchers.py  test_metric_core.py  test_metric_properties.py  test_quality.py  test_report.py  test_result.py  test_viz.py
